# Homework_cpp_3_term

./: .gitignore  1_hw.cpp  2_hw.cpp  CODE_OF_CONDUCT.md  LICENSE  README.md  Source.cpp  rational_poly.cpp  task_E.cpp
HW 1/: 1_hw.cpp
HW 2/: Book.cpp  Book.h
HW 3/: Makefile  bye.cpp  hello.cpp  main.cpp
HW_10/: DijkstraAlgorithm.cpp  DijkstraAlgorithm.h  DiscreteMetric.cpp  DiscreteMetric.h  EnumerationAlgorithm.cpp  EnumerationAlgorithm.h  EuclideanMetric.cpp  EuclideanMetric.h  FastAlgorithm.cpp  FastAlgorithm.h  MetricsI.h  MyMetric.h  MyMetrics.cpp  OptimizeAlgorithmI.h  Point.cpp  Point.h  main.cpp
HW_10/Release/: Initialization.txt  RealTest1.txt  RealTest2.txt  RealTest3.txt  RealTest4.txt  RealTest5.txt  gen.cpp  testing.cmd
HW_11/: BadFromStringException.cpp  BadFromStringException.h  ConvertString.h  ConvertString.hpp  main.cpp
HW_2/: Source.cpp
HW_3/: here.cpp  mylib.h
HW_4/: Build.cmd
HW_4/rational/: Build.cmd  CMakeLists.txt  Test.cmd
HW_4/rational/installer/include/: polynom.h
HW_4/rational/installer/share/: polynom-noconfig.cmake  polynom.cmake
HW_4/rational/lib_rational/: CMakeLists.txt  lib_rational.cpp  lib_rational.h
HW_4/rational/mylib_test/: CmakeLists.txt  mylib_test.cpp  test_eazy.txt  test_long_max_value.txt  test_long_poly.txt  test_mega.txt  test_middle.txt
HW_4/rational/polynom/: CMakeLists.txt  polynom.cpp
HW_4/rational/rational_poly/: CMakeLists.txt  rational_poly.cpp
HW_5/: Source.cpp  String.cpp  String.h
HW_6/: Date.cpp  Date.h  Person.cpp  Person.h  main.cpp
HW_7/: Array.h  Array.hpp  main.cpp
HW_8/: Animal.cpp  Animal.h  Bear.cpp  Bear.h  BearPigMan.cpp  BearPigMan.h  Man.cpp  Man.h  Pig.cpp  Pig.h  Unit.cpp  Unit.h  functions.cpp  main.cpp
HW_9/: Array.h  Array.hpp  main.cpp
img/: Thumbs.db
